--- a/css/main.css
+++ b/css/main.css
@@ -3,9 +3,15 @@ table, th , td  {
   border-collapse: collapse;
   padding: 5px;
 }
-table tr:nth-child(odd) {
-  background-color: #f1f1f1;
+
+th {
+	background-color: pink;
 }
-table tr:nth-child(even) {
-  background-color: #ffffff;
+
+table {
+	margin-bottom: 20px;
+}
+
+table tr:nth-child(odd) {
+  background-color: #00fff1;
 }
